maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:21: error: not found: value placement
while(!estSurBiscuit()){placement()}
                        ^